[project]
name = "loock-lock-extend"
version = "0.1.0"
description = "Loock Lock Extend"
readme = "README.md"
authors = [
  {name = "DoubleBird", email = "zcmk1234@gmail.com"}
]
maintainers = [
  {name = "DoubleBird", email = "zcmk1234@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/zcmk123/loock_lock_extend/issues"
changelog = "https://github.com/zcmk123/loock_lock_extend/blob/master/changelog.md"
homepage = "https://github.com/zcmk123/loock_lock_extend"

[project.scripts]
loock_lock_extend = "loock_lock_extend.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
